--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Command line Blackjack game. 
 Python built for practice with classes.
 
-![Alt text](BlackJackScreenshot.jpg)
+![Alt text](BlackJackScreenshot.jpg?raw=true "Gameplay Screenshot")
